trunk/Archive2/c7/ee9cb29dccde9e/output
main.cpp:17:35: error: expected ';' at end of declaration
    std::vector<std::string> words ＝ {
                                  ^
                                  ;
1 error generated.
